tests/ui/derives/derives-span-Ord-struct.stderr
error[E0277]: the trait bound `Error: Ord` is not satisfied
  --> $DIR/derives-span-Ord-struct.rs:8:5
   |
LL | #[derive(Ord,Eq,PartialOrd,PartialEq)]
   |          --- in this derive macro expansion
LL | struct Struct {
LL |     x: Error
   |     ^^^^^^^^ the trait `Ord` is not implemented for `Error`
  --> $SRC_DIR/core/src/cmp.rs:LL:COL
   |
   = note: in this expansion of `#[derive(Ord)]`
   |
help: consider annotating `Error` with `#[derive(Ord)]`
   |
LL + #[derive(Ord)]
LL | struct Error;
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
